--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <main class="content">
       <h1>Public Host By Sokpheng</h1>
         <div class="browser-image">
-           <img src="image/page_1.png" alt="Supported Browsers" />
-           <img src="image/page_2.png" alt="Supported Browsers" />
-           <img src="image/page_3.png" alt="Supported Browsers" />
-           <img src="image/page_4.png" alt="Supported Browsers" />
-           <img src="image/page_5.png" alt="Supported Browsers" />
-           <img src="image/page_6.png" alt="Supported Browsers" />
+           <img src="page_1.png" alt="Supported Browsers" />
+           <img src="page_2.png" alt="Supported Browsers" />
+           <img src="page_3.png" alt="Supported Browsers" />
+           <img src="page_4.png" alt="Supported Browsers" />
+           <img src="page_5.png" alt="Supported Browsers" />
+           <img src="page_6.png" alt="Supported Browsers" />
         </div>
     </main>
   </div>
